# ood

./: .clang-format  .gitignore  CMakeLists.txt
lab1/: CMakeLists.txt
lab1/SimUDuckFunctional/: CMakeLists.txt  main.cpp
lab1/SimUDuckFunctional/Behaviors/: DanceBehaviors.cpp  DanceBehaviors.h  FlyBehaviors.cpp  FlyBehaviors.h  QuackBehaviors.cpp  QuackBehaviors.h
lab1/SimUDuckFunctional/Ducks/: CDecoyDuck.cpp  CDecoyDuck.h  CDuck.cpp  CDuck.h  CMallardDuck.cpp  CMallardDuck.h  CModelDuck.cpp  CModelDuck.h  CRedheadDuck.cpp  (+3 more)
lab2/: CMakeLists.txt  diagram.mmd
lab2/WeatherStation/: CMakeLists.txt  main.cpp
lab2/WeatherStation/tests/: CMakeLists.txt  WeatherStation_tests.cpp
lab2/WeatherStationDuo/: CMakeLists.txt  main.cpp
lab2/WeatherStationPro/: CMakeLists.txt  main.cpp
lab2/WeatherStationProDuo/: CMakeLists.txt  main.cpp
lab2/WeatherStationProLite/: CMakeLists.txt  main.cpp
lab3/: CMakeLists.txt
lab3/Coffee/: CCoffeeShop.cpp  CCoffeeShop.h  CMakeLists.txt  diagram.mmd  main.cpp
lab3/Transform/: diagram.mmd  main.cpp
lab4/: diagram.mmd
lab4/Designer/: CMakeLists.txt  main.cpp
lab5/: diagram.mmd
lab6/: CMakeLists.txt
lab6/GraphicsClassAdapterWithColors/: CMakeLists.txt
lab6/GraphicsObjectAdapter/: diagram.mmd
lab7/: diagram.mmd
lab7/Slides/: main.cpp
lab8/NaiveMultiGumballMachine/: CGumballMachine.hpp
lab9/: CMakeLists.txt
lab9/TiledImage/: CMakeLists.txt  CoW.h  Drawer.cpp  Drawer.h  Geom.h  Image.cpp  Image.h  ImageService.cpp  ImageService.h  Tile.h  main.cpp
lab9/TiledImage/tests/: CMakeLists.txt  TiledImage.tests.cpp
(+229 files in other folders)
